--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@ __pycache__/
 #latex
 relatorio/*.aux
 relatorio/*.out
-relatorio/*.fdb_latex
+relatorio/*.fdb_latexmk
 relatorio/*.fls
 relatorio/*.log
 relatorio/*.synctex.gz
+
+*.log
